fix progressbar visibility on small recordable data and show progressbar label

--- a/css/black/styles.css
+++ b/css/black/styles.css
@@ -3373,3 +3373,6 @@
 #virtualclassCont.playMode.student #virtualclassEditorCode{margin-top: 0px; border-top:#ccc 1px solid;}
 
 
+#totalProgressLabel, #indvProgressLabel {
+	color : #262626;
+}
